Add grafana dash example image

--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -203,6 +203,8 @@ systemctl enable --now grafana-server
 ----
 . Navigate to port 3000 in your browser.
 
+image::monitoring_grafana_example.png[scaledwidth=80%]
+
 Grafana settings are configured in [path]``/etc/grafana/grafana.ini``.
 
 TODO:: include direct link for the SUSE Manager dashboard (once uploaded).
