Fix borked image and headings

--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -155,7 +155,8 @@ Installing and configuring exporters is done using a Salt formula.
 
 
 
-== Enable Monitoring
+== Enable and Configure Monitoring
+
 
 .Procedure: Enabling Monitoring
 
@@ -164,11 +165,13 @@ Installing and configuring exporters is done using a Salt formula.
 
 image::monitoring_enable_services.png[scaledwidth=80%]
 
+
 .Procedure: Configure Prometheus
 
 . In the {susemgr} {webui}, open the details page for the server, and navigate to the Formulas tab.
 . Check the [guimenu]``Monitoring`` checkbox to select all monitoring formulas, and click btn:[Save].
 . Apply the highstate.
+
 
 .Procedure: Configuring the Node Exporter
 
@@ -188,6 +191,7 @@ The Grafana website contains dozens of dashboards uploaded by the community, inc
 For more information, see: https://grafana.com/dashboards
 
 To use Grafana with {productname}, you need to have enabled metrics in the {productname} {webui}, and configured your Prometheus instance to collect those metrics.
+
 
 .Procedure: Setting up Grafana
 
