hide todo items

--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -23,8 +23,7 @@ A Grafana package is included in the SUSE Manager Client Tools for {sle}{nbsp}12
 Prometheus metrics are time series data, or timestamped values belonging to the same group or dimension.
 A metric is uniquely identified by its name and set of labels.
 
-Example:
-TODO:: This should be an actual image.
+// TODO:: This should be an actual image.
 
 ----
    metric name               labels                 timestamp     value
@@ -211,4 +210,4 @@ image::monitoring_grafana_example.png[scaledwidth=80%]
 
 Grafana settings are configured in [path]``/etc/grafana/grafana.ini``.
 
-TODO:: include direct link for the SUSE Manager dashboard (once uploaded).
+// TODO:: include direct link for the SUSE Manager dashboard (once uploaded).
