Added admonition about beta packages

--- a/modules/reference/pages/systems/system-details/sd-software-channels.adoc
+++ b/modules/reference/pages/systems/system-details/sd-software-channels.adoc
@@ -3,6 +3,16 @@
 
 Software channels provide a well-defined method to determine which packages should be available to a system for installation or upgrade based on its operating systems, installed packages, and functionality.
 
+[IMPORTANT]
+.Beta Testing Participants
+====
+When a product moves out of the beta program to a released version, the repositories are updated with the new packages.
+However, the repository names do not change.
+When a beta program is released, you will need to refresh the software channels to get the updated packages.
+You can do this manually by running [command]``mgr-sync refresh`` and [command]``spacewalk-repo-sync``.
+Alternatively, these will be run automatically by Taskomatic during the next regular refresh.
+====
+
 image::system_details_traditional_software_system_channels.png[scaledwidth=80%]
 
 Click the chain icon right to a channel name to view its [guimenu]``Channel Details`` page.
