--- a/modules/administration/pages/tuning-largedeploys.adoc
+++ b/modules/administration/pages/tuning-largedeploys.adoc
@@ -91,6 +91,6 @@ Click menu:Admin[Task Schedules], then the btn:[cobbler-sync-default] link, then
 ** Disable daily run of Gatherer and Subscription Matcher. 
 Click menu:Admin[Task Schedules], then the btn:[gatherer-matcher-default] link, then the btn:[Disable Schedule] button and finally btn:[Delete Schedule].
 
-Note that increasing the number of Postgres connections will require more RAM, make sure the {productname} server is monitored and swap is never used.
+Note that increasing the number of PostgreSQL connections will require more RAM, make sure the {productname} server is monitored and swap is never used.
 
 Also note the above settings should be regarded as guidelines{mdash}they have been tested to be safe but care should be exercised when changing them, and consulting support is highly recommended.
