--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -10,12 +10,12 @@ ifndef::backend-pdf[]
 *** xref:client-requirements.adoc[Supported Clients]
 ** Installation
 ifeval::[{suma-content} == true]
-*** xref:install-server-unified.adoc[Installing SUSE Manager Server]
-*** xref:install-proxy-unified.adoc[SUSE Manager 4.0 Proxy]
+*** xref:install-server-unified.adoc[Install Server]
+*** xref:install-proxy-unified.adoc[Install Proxy]
 endif::[]
 *** xref:install-vm.adoc[Install VM]
-*** xref:install-server.adoc[Install Server]
-*** xref:install-proxy.adoc[Install Proxy]
+*** xref:install-server.adoc[Install Server from Packages]
+//*** xref:install-proxy.adoc[Install Proxy from Packages]
 *** xref:install-ibmz.adoc[Install on IBM Z]
 ** Setting Up
 *** xref:server-setup.adoc[Server Setup]
