Deleted dupe & commented out TBD content

--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -8,10 +8,9 @@ ifndef::backend-pdf[]
 ** xref:proxy-migration.adoc[Proxy Upgrade 3.x -> 4.x]
 ** xref:client-migration.adoc[Client Migration]
 ** xref:sp-migration.adoc[Service Pack Migration]
-*** xref:performing-an-sp-migration.adoc[Performing an SP Migration]
 ** xref:db-migration.adoc[Database Migration]
-** xref:maintenance-window-tasks.adoc[Maintenance Window Tasks]
-** xref:troubleshooting-upgrades-and-migrations.adoc[Troubleshooting]
+// ** xref:maintenance-window-tasks.adoc[Maintenance Window Tasks]
+//** xref:troubleshooting-upgrades-and-migrations.adoc[Troubleshooting]
 ** xref:upgrade-script-example.adoc[Example Script for Automated Upgrades]
 ** xref:common_gfdl1.2_i.adoc[License]
 
@@ -49,17 +48,14 @@ include::modules/upgrade/pages/client-migration.adoc[leveloffset=+1]
 // Service pack Migration Intro
 include::modules/upgrade/pages/sp-migration.adoc[leveloffset=+1]
 
-// Performing a Service Pack Migration
-include::modules/upgrade/pages/performing-an-sp-migration.adoc[leveloffset=+2]
-
 // Database Migration
 include::modules/upgrade/pages/db-migration.adoc[leveloffset=+1]
 
 // Maintenance Window Tasks
-include::modules/upgrade/pages/maintenance-window-tasks.adoc[leveloffset=+1]
+// include::modules/upgrade/pages/maintenance-window-tasks.adoc[leveloffset=+1]
 
 // Troubleshooting Upgrades and Migrations
-include::modules/upgrade/pages/troubleshooting-upgrades-and-migrations.adoc[leveloffset=+1]
+//include::modules/upgrade/pages/troubleshooting-upgrades-and-migrations.adoc[leveloffset=+1]
 
 // Upgrade Script Example
 include::modules/upgrade/pages/upgrade-script-example.adoc[leveloffset=+1]
