Update PDF nav to match

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -70,7 +70,7 @@ include::modules/installation/pages/install-vm.adoc[leveloffset=+2]
 include::modules/installation/pages/install-server.adoc[leveloffset=+2]
 
 // Install Proxy
-include::modules/installation/pages/install-proxy.adoc[leveloffset=+2]
+//include::modules/installation/pages/install-proxy.adoc[leveloffset=+2]
 
 // Install on IBM Z
 include::modules/installation/pages/install-ibmz.adoc[leveloffset=+2]
