removed draft text in uyuni and suma indexes

--- a/modules/ROOT/pages/index-suma.adoc
+++ b/modules/ROOT/pages/index-suma.adoc
@@ -1,4 +1,4 @@
-= {productname} {productnumber} Draft Documentation
+= {productname} {productnumber} Documentation
 
 
 
@@ -15,13 +15,13 @@ The Salt-master orchestrates thousands of Salt-minions ({productname} Clients) u
 
 
 
-== Available Draft Documentation
+== Available Documentation
 
 The following documentation is available for {productname} version {productnumber}.
 
 [cols=2*, options="header"]
 |===
-| Available Draft Documentation | Formats
+| Available Documentation | Formats
 
 | Installation Guide         | xref:installation:install-intro.adoc[HTML] link:../../pdf/suse_manager_installation_guide.pdf[PDF]
 | Client Configuration Guide | xref:client-configuration:client-config-overview.adoc[HTML] link:../../pdf/suse_manager_client_configuration_guide.pdf[PDF]
