--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -54,7 +54,8 @@ In PromQL, an expression can evaluate to one of three types:
 
 * Instant vector: a set of time series containing a single sample for each time series, all sharing the same timestamp
 * Range vector: a set of time series containing a range of data points over time for each time series
-* Scalar: a numeric floating point value.
+* Scalar: a numeric floating point value
+```At least, I'd remove it.  
 
 The core part of any PromQL query is the metric name, for example: ``http_requests_total``.
 Labels can be used as optional selectors.
