--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -79,7 +79,7 @@ The Prometheus community provides a list of official exporters, and many others 
 For detailed information and an extensive list of exporters, see: https://prometheus.io/docs/instrumenting/exporters/.
 
 With {productname}{nbsp}4, you can set up the Server and Proxy to expose Prometheus metrics to provide insights about {productname} self-health.
-Medtrics are available for these services:
+Metrics are available for these services:
 
 * Hardware and Operating System
 * Java Virtual Machines
