--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -98,7 +98,7 @@ These exporter packages are shipped with {productname} Server:
 * Node exporter: [systemitem]``golang-github-prometheus-node_exporter``.
 See https://github.com/prometheus/node_exporter.
 * PostgreSQL exporter: [systemitem]``golang-github-wrouesnel-postgres_exporter``.
-See (https://github.com/wrouesnel/postgres_exporter.
+See https://github.com/wrouesnel/postgres_exporter.
 * JMX exporter: [systemitem]``prometheus-jmx_exporter``.
 See https://github.com/prometheus/jmx_exporter.
 * Apache exporter: [systemitem]``golang-github-lusitaniae-apache_exporter``.
