--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -149,7 +149,7 @@ Currently, two exporters are supported:
 * Node exporter: [systemitem]``golang-github-prometheus-node_exporter``.
 See https://github.com/prometheus/node_exporter.
 * PostgreSQL exporter: [systemitem]``golang-github-wrouesnel-postgres_exporter``.
-See (https://github.com/wrouesnel/postgres_exporter.
+See https://github.com/wrouesnel/postgres_exporter.
 
 Installing and configuring exporters is done using a Salt formula.
 
