--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -18,6 +18,23 @@ A Grafana package is included in the SUSE Manager Client Tools for {sle}{nbsp}12
 
 
 
+== Setup Prometheus
+.Procedure: Setup Prometheus
+
+. Install the [package]``golang-github-prometheus-prometheus`` package:
++
+----
+zypper in golang-github-prometheus-prometheus
+----
+. Enable the Prometheus service:
++
+----
+systemctl enable --now prometheus
+----
+. Navigate to port 9090 in your browser and confirm the Prometheus UI is loaded.
+
+
+
 == Prometheus Metrics
 
 Prometheus metrics are time series data, or timestamped values belonging to the same group or dimension.
@@ -53,13 +70,16 @@ It is used in all Prometheus interactions.
 In PromQL, an expression can evaluate to one of three types:
 
 * Instant vector: a set of time series containing a single sample for each time series, all sharing the same timestamp
-* Range vector: a set of time series containing a range of data points over time for each time series
-* Scalar: a numeric floating point value
-```At least, I'd remove it.  
 
-The core part of any PromQL query is the metric name, for example: ``http_requests_total``.
+* Range vector: a set of time series containing a range of data points over time for each time series
+
+* Scalar: a numeric floating point value
+
+
+
+The core part of any PromQL query is the metric name, for example: *http_requests_total*.
 Labels can be used as optional selectors.
-This example returns the total number of HTTP requests that have status ``200`` and method ``GET``:
+This example returns the total number of HTTP requests that have status *200* and method *GET*:
 
 ----
 http_requests_total{status="200", method="GET"}
@@ -166,14 +186,14 @@ Installing and configuring exporters is done using a Salt formula.
 image::monitoring_enable_services.png[scaledwidth=80%]
 
 
-.Procedure: Configure Prometheus
+.Procedure: Configure Monitoring Formulas
 
 . In the {susemgr} {webui}, open the details page for the server, and navigate to the Formulas tab.
 . Check the [guimenu]``Monitoring`` checkbox to select all monitoring formulas, and click btn:[Save].
 . Apply the highstate.
 
 
-.Procedure: Configuring the Node Exporter
+.Procedure: Configuring the Exporters
 
 . In the {susemgr} {webui}, open the details page for the server, and navigate to the menu:Formulas[Prometheus Exporters] tab.
 . Check the [guimenu]``Enabled`` checkbox for both the Node Exporter, and the Postgres Exporter.
