updated procedure name for monitoring

--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -178,7 +178,7 @@ Installing and configuring exporters is done using a Salt formula.
 == Enable and Configure Monitoring
 
 
-.Procedure: Enabling Monitoring
+.Procedure: Enabling Self Monitoring for {productname}
 
 . In the {productname} {webui}, navigate to menu:Admin[Manager Configuration > Monitoring].
 . Click btn:[Enable services].
