updated setup section

--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -17,24 +17,6 @@ For more information about Grafana, see: https://grafana.com/docs/.
 A Grafana package is included in the SUSE Manager Client Tools for {sle}{nbsp}12 and {sle}{nbsp}15.
 
 
-
-== Setup Prometheus
-
-.Procedure: Setup Prometheus
-. Install the [package]``golang-github-prometheus-prometheus`` package:
-+
-----
-zypper in golang-github-prometheus-prometheus
-----
-. Enable the Prometheus service:
-+
-----
-systemctl enable --now prometheus
-----
-. Navigate to port 9090 in your browser and confirm the Prometheus UI is loaded.
-
-
-
 == Prometheus Metrics
 
 Prometheus metrics are time series data, or timestamped values belonging to the same group or dimension.
@@ -133,7 +115,25 @@ See https://github.com/boynux/squid-exporter.
 
 
 
-== Prometheus Configuration
+== Setup Prometheus with {productname}
+
+=== Prometheus Installation
+
+.Procedure: Setup Prometheus
+. Install the [package]``golang-github-prometheus-prometheus`` package:
++
+----
+zypper in golang-github-prometheus-prometheus
+----
+. Enable the Prometheus service:
++
+----
+systemctl enable --now prometheus
+----
+. Navigate to port 9090 in your browser and confirm the Prometheus UI is loaded.
+
+
+=== Configuring Prometheus
 
 Prometheus requires some configuration to collect metrics and set up alarms, or to display metrics graphically in Grafana.
 You can configure Prometheus in the static configuration file at [path]``/etc/prometheus/prometheus.yml``.
