updated prometheus configuration steps

--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -115,7 +115,7 @@ See https://github.com/boynux/squid-exporter.
 
 
 
-== Setup Prometheus with {productname}
+== Prometheus Configuration Steps
 
 === Prometheus Installation
 
