Minor edits to the new Prometheus section

--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -115,11 +115,15 @@ See https://github.com/boynux/squid-exporter.
 
 
 
-== Prometheus Configuration Steps
+== Install and Configure Prometheus
 
-=== Prometheus Installation
+Prometheus is installed from a package, and needs configuration before you can use it to gather metrics.
 
-.Procedure: Setup Prometheus
+
+
+=== Installing Prometheus
+
+.Procedure: Installing Prometheus
 . Install the [package]``golang-github-prometheus-prometheus`` package:
 +
 ----
@@ -130,7 +134,8 @@ zypper in golang-github-prometheus-prometheus
 ----
 systemctl enable --now prometheus
 ----
-. Navigate to port 9090 in your browser and confirm the Prometheus UI is loaded.
+. Navigate to port 9090 in your browser to confirm that  the Prometheus interface is loading correctly.
+
 
 
 === Configuring Prometheus
@@ -186,7 +191,7 @@ Installing and configuring exporters is done using a Salt formula.
 image::monitoring_enable_services.png[scaledwidth=80%]
 
 
-.Procedure: Configure Monitoring Formulas
+.Procedure: Configuring Monitoring Formulas
 
 . In the {susemgr} {webui}, open the details page for the server, and navigate to the Formulas tab.
 . Check the [guimenu]``Monitoring`` checkbox to select all monitoring formulas, and click btn:[Save].
