--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -9,11 +9,12 @@ ifndef::backend-pdf[]
 *** xref:retail-install-unified.adoc[Installing with the Unified Installer]
 *** xref:retail-install-packages.adoc[Installing from Packages]
 *** xref:retail-install-setup.adoc[Setting up]
-*** xref:retail-deploy-terminals.adoc[Deploying POS Terminals]
+*** xref:retail-deploy-terminals.adoc[Deploying Terminals]
 // Admin
 ** xref:retail-admin.adoc[Administration]
 *** xref:retail-formulas.adoc[Formulas]
 *** xref:retail-delta-images.adoc[Delta Images]
+*** xref:retail-ternminal-names.adoc[Terminal Names]
 *** xref:retail-mass-config.adoc[Mass Configuration]
 // Retail Upgrade
 ** xref:retail-migration-intro.adoc[Retail Upgrade]
@@ -32,8 +33,6 @@ ifdef::backend-pdf[]
 include::./branding/pdf-resources/entities.adoc[]
 :toclevels: 3
 :doctype: book
-
-include::modules/retail/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
 
 // Retail Guide Introduction
 include::modules/retail/pages/retail-introduction.adoc[leveloffset=+1]
@@ -60,7 +59,9 @@ include::modules/retail/pages/retail-formulas.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-delta-images.adoc[leveloffset=+3]
 
-include::modules/retail/pages/retail-mass-config.adoc[leveloffset=+2]
+include::modules/retail/pages/retail-terminal-names.adoc[leveloffset=+3]
+
+include::modules/retail/pages/retail-mass-config.adoc[leveloffset=+3]
 
 // Retail Upgrade
 include::modules/retail/pages/retail-migration-intro.adoc[leveloffset=+1]
