--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -11,7 +11,9 @@ When you have the {susemgr} Server and Branch Server set up, you are ready to de
 
 Each procedure is detailed in this section.
 
-If you have many terminals, and would prefer this to be handled with a script, see xref:retail:retail-mass-config[].
+If you have many terminals, and would prefer this to be handled with a script, see xref:retail:retail-mass-config.adoc[].
+
+If you are deploying terminals based on {sls}{nbsp}11, see the notes at the end of this section.
 
 Before terminals can be deployed, ensure you have prepared a Saltboot-based operating system image.
 For how to build OS images, see xref:administration:image-management.adoc[].
@@ -20,7 +22,6 @@ For how to build OS images, see xref:administration:image-management.adoc[].
 ====
 After you have registered new terminals, always check the {susemgr} {webui} to ensure your terminal has connected successfully to the branch server, and you have not connected directly to the {susemgr} server by mistake.
 ====
-
 
 == Create a Hardware Type group
 
@@ -58,11 +59,11 @@ Spaces and other non-alphanumeric characters will be removed when the name is pr
 . In the [guimenu]``Create System Group`` dialog, create a new system group, using the hardware type group name you created earlier.
 
 
-== Assign and Configure the Saltboot formula for each Hardware Type Group
+== Assign and Configure the Saltboot formula for each hardware type group
 
-TBD
+Each hardware type group must have the Saltboot formula applied.
 
-.Procedure: Configuring partitioning and assigned images
+.Procedure: Assigning the Saltboot formula
 
 . Open the details page for your new hardware type group, and navigate to the [guimenu]``Formulas`` tab.
 . Select the [systemitem]``saltboot-formula`` and click btn:[Save].
@@ -70,7 +71,7 @@ TBD
 . Configure the Saltboot formula according to the instructions in xref:retail:retail-formulas[].
 
 
-== Synchronize images to the Branch Server
+== Synchronize images to the branch server
 
 .Procedure: Synchronizing images to the branch server
 
@@ -82,5 +83,49 @@ salt <branch_server_salt_id> state.apply image-sync
 
 == Deploy images to the terminals
 
-Power on your POS terminals.
-The branch server will bootstrap the terminals according to the data you have provided.
+.Procedure: Deploying images to the terminals
+
+. Power on your POS terminals.
+. The branch server will bootstrap the terminals according to the data you have provided.
+
+
+== Terminals based on {slsa}{nbsp}11 SP{nbsp}3
+
+POS Terminals based on {sls}{nbsp}11 SP{nbsp}3 can be deployed in much the same way as other terminals, with a few differences.
+
+* You must use the {slsa}{nbsp}11 template
+* {slsa}{nbsp}11 images need to be activated with the [systemitem]``SLES11SP4 i586`` and [systemitem]``SLES11SP4 SDK i586`` channels
+
+[IMPORTANT]
+====
+Ensure that {slsa}{nbsp}11 images are built on the {slsa}{nbsp}11 build host, and {slsa}{nbsp}12 images are built on the {slsa}{nbsp}12 build host.
+Building on the incorrect build host will cause your build to fail.
+====
+
+
+
+== Using a 32-bit default boot image
+
+If you have 32-bit machines included in your branch, then you must use a 32-bit default boot image.
+
+You can check the available boot images and their architecture from the command line:
+
+----
+# salt "branch" pillar.get boot_images
+
+POS_Image_JeOS6-6.0.0:
+      ----------
+      arch:
+          x86_64
+      ...
+legacy-6.0.0:
+      ----------
+      arch:
+          i686
+----
+
+In this example, the [systemitem]``legacy-6.0.0`` boot image is 32-bit.
+
+You can set the default boot image in the Image Synchronization formula, by adding the chosen boot image name to the [guimenu]``Synchronize only the listed images`` field.
+
+image::retail_imagesync_formula.png[scaledwidth=80%]
