--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -68,7 +68,7 @@ Each hardware type group must have the Saltboot formula applied.
 . Open the details page for your new hardware type group, and navigate to the [guimenu]``Formulas`` tab.
 . Select the [systemitem]``saltboot-formula`` and click btn:[Save].
 . Navigate to the new menu:Formulas[Saltboot] tab.
-. Configure the Saltboot formula according to the instructions in xref:retail:retail-formulas[].
+. Configure the Saltboot formula according to the instructions in xref:retail:retail-formulas.adoc[].
 
 
 == Synchronize images to the branch server
