Add warning about SLES11 and TLS

--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -102,7 +102,12 @@ Ensure that {slsa}{nbsp}11 images are built on the {slsa}{nbsp}11 build host, an
 Building on the incorrect build host will cause your build to fail.
 ====
 
-
+[WARNING]
+====
+If you are building images for {slsa}{nbsp}11 using profiles from an HTTPS git repository that uses TLS 1.0 or greater, it will fail.
+{slsa}{nbsp}11 does not support later versions of TLS.
+You will need to clone the repository locally in order to use it for building.
+====
 
 == Using a 32-bit default boot image
 
