--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -1,8 +1,8 @@
 [[install-server-unified]]
-= Installing {productname} Server
+= Installing {productname} {productnumber} Server
 
-{susemgr} Server is a {suse} base product from version 4.0.
-This section describes how to install {susemgr} Server from {sls} installation media.
+{susemgr} 4.0 is a {suse} product of the {sle} 15.1 product family.
+This section describes how to install {susemgr} Server from {sle} installation media.
 It assumes you have already registered the {susemgr} product with the {scc} and have a registration code.
 
 For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[Requirements].
