update images and use them partially renamed

--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -26,7 +26,9 @@ image::unifiedinstaller-install.png[scaledwidth=80%]
 image::unifiedinstaller-product.png[scaledwidth=80%]
 . Read and agree to the End User Licence Agreement, and click btn:[Next].
 . In the [guimenu]``Registration`` screen, check the [guimenu]``Register System via scc.suse.com`` checkbox, enter your {scc} credentials, and click btn:[Next].
-. OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
+. OPTIONAL: In the [guimenu]``Available Extensions and Modules`` screen, select any extensions or modules you require, and click btn:[Next].
++
+image::unifiedinstaller-extensions.png[scaledwidth=80%]
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
 . In the [guimenu]``Suggested Partitioning`` screen, accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
 . In the [guimenu]``Clock and Time Zone`` screen, enter your region and timezone, and click btn:[Next].
