--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -22,13 +22,19 @@ If you want to install {susemgr} on a virtual machine, ensure your virtual machi
 +
 image::unifiedinstaller-install.png[scaledwidth=80%]
 . In the [guimenu]``Language, Keyboard and Product Selection`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
-+
-image::unifiedinstaller-product.png[scaledwidth=80%]
 . Read and agree to the End User Licence Agreement, and click btn:[Next].
++
+image::unifiedinstaller-registration.png[scaledwidth=80%]
 . In the [guimenu]``Registration`` screen, check the [guimenu]``Register System via scc.suse.com`` checkbox, enter your {scc} credentials, and click btn:[Next].
-. OPTIONAL: In the [guimenu]``Available Extensions and Modules`` screen, select any extensions or modules you require, and click btn:[Next].
+// +
+// The registration server offers update repositories.
 +
 image::unifiedinstaller-extensions.png[scaledwidth=80%]
+. OPTIONAL: In the [guimenu]``Available Extensions and Modules`` screen, select additional extensions or modules you require, and click btn:[Next].
+Mandatory modules are pre-selected and you cannot disable them.
++
+image::unifiedinstaller-addon.png[scaledwidth=80%]
+. »»»* re-add Add On Product — it's still there, after E+M
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
 . In the [guimenu]``Suggested Partitioning`` screen, accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
 . In the [guimenu]``Clock and Time Zone`` screen, enter your region and timezone, and click btn:[Next].
