--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -30,11 +30,11 @@ image::unifiedinstaller-registration.png[scaledwidth=80%]
 // The registration server offers update repositories.
 +
 image::unifiedinstaller-extensions.png[scaledwidth=80%]
-. OPTIONAL: In the [guimenu]``Available Extensions and Modules`` screen, select additional extensions or modules you require, and click btn:[Next].
+. In the [guimenu]``Available Extensions and Modules`` screen, select additional extensions or modules you require, and click btn:[Next].
 Mandatory modules are pre-selected and you cannot disable them.
 +
 image::unifiedinstaller-addon.png[scaledwidth=80%]
-. »»»* re-add Add On Product — it's still there, after E+M
+. OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
 . In the [guimenu]``Suggested Partitioning`` screen, accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
 . In the [guimenu]``Clock and Time Zone`` screen, enter your region and timezone, and click btn:[Next].
