--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -5,15 +5,15 @@
 This section covers {productname} setup.
 You will perform the following procedures:
 
-* Start {productname} setup via YaST or command line
+* Start {productname} setup via YaST
 * Create the main administration account with the {productname} {webui}
 * Name your base organization and add login credentials
-* Sync the {sle} product channel from {scc}
+* Synchronize the {sle} product channel from {scc}
 
 [WARNING]
 .Third Party Software
 --
-{productname} is an extension of {sls} and compatible with the software shipped with {sls}.
+{productname} is part of the {sle} 4.0 product family and thus compatible with the software shipped with {sls}.
 
 {productname} is a complex system, and therefore installing third party is not allowed. Installing monitoring software provided by a third party vendor is allowed only if you do not exchange basic libraries such as SSL, cryptographic software, and similar tools.
 In case of emergency, SUSE reserves the right to ask to remove any third party software (and associated configuration changes) and then to reproduce the problem on a clean system.
@@ -22,10 +22,10 @@ In case of emergency, SUSE reserves the right to ask to remove any third party s
 This section will guide you through {productname} setup procedures.
 
 .Procedure: {productname} Setup
-. Login to the {productname} server desktop and perform one of the following actions to begin setup:
+. Log in to the {productname} server and type [command]``yast2 susemanager_setup`` to begin the setup.
 
-* Select menu:Applications[System Tools > YaST > SUSE Manager Setup].
-* Open a terminal as root and type [command]``yast2 susemanager_setup`` to begin setup.
+// * Select menu:Applications[System Tools > YaST > SUSE Manager Setup].
+// * Open a terminal as root and type [command]``yast2 susemanager_setup`` to begin setup.
 
 . From the introduction screen select menu:SUSE Manager Setup[Setup SUSE Manager from scratch] and click btn:[Next] to continue.
 
@@ -93,15 +93,16 @@ For security it is recommended that the main administrator creates _low level ad
 
 . Fill in the Account Information fields including an email for system notifications.
 
-. Select menu:Create Organization[] to finish creating your administration account.
+. Click btn:[Create Organization] to finish creating your administration account.
 +
 
 image::quickstart-mgr-setup-admin1.png[scaledwidth=80%]
 
-You should now be presented with the {productname} Front Page. In the next section you will prepare the server for connecting the first client.
+You should now be presented with the {productname} menu:Home[Overview] page.
+// In the next section you will prepare the server for connecting the first client.
 
 
-== Syncing Products from {scc}
+== Synchronizing Products from {scc}
 
 {scc} (SCC) maintains a collection of repositories which contain packages, software and updates for all supported enterprise client systems.
 These repositories are organized into channels each of which provide software specific to a distribution, release and architecture.
@@ -125,7 +126,7 @@ pass:c[xref:FILENAME.adoc#vle.webui.admin.wizard.products[]]
 image::admin_suse_products.png[scaledwidth=80%]
 +
 
-. Since Your {sle} client is based on [systemitem]``x86_64`` architecture scroll down the page and select the check box for this channel now.
+. If your {sle} client is based on [systemitem]``x86_64`` architecture scroll down the page and select the check box for this channel now.
 
 * Add channels to {productname} by selecting the check box to the left of each channel.
 Click the arrow symbol to the left of the description to unfold a product and list available modules.
