--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -10,14 +10,15 @@ For information on registering with {scc}, or obtaining installation media, see 
 
 [NOTE]
 ====
-If you want to install {susemgr} on a virtual machine, ensure your virtual machine has enough disk space and RAM by checking the requirements at xref:hardware-requirements.adoc[Hardware].
+Before installing {susemgr}, ensure your physical or virtual machine has enough disk space and RAM by checking the requirements at xref:hardware-requirements.adoc[Hardware].
 ====
 
 
 
 .Procedure: Installing {susemgr} Server from a DVD image
 
-. Boot your server from the installation image, you might need to adjust the boot order in the BIOS.
+. Boot your server from the installation image.
+If booting fails you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
 +
 image::unifiedinstaller-install.png[scaledwidth=80%]
