--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -134,7 +134,8 @@ zypper in golang-github-prometheus-prometheus
 ----
 systemctl enable --now prometheus
 ----
-. Navigate to port 9090 in your browser to confirm that  the Prometheus interface is loading correctly.
+. Confirm that the Prometheus interface is loading correctly.
+In your browser, navigate to the URL of the server where Prometheus is installed, on port 9090 (for example, [path]``http://example.com:9090``).
 
 
 
