testing license removal for antora

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -50,7 +50,7 @@ ifndef::backend-pdf[]
 // Including it again; it's an important bit of info. ke 2019-05-09
 ** xref:autoyast-example.adoc[AutoYaST Example]
 // License
-** xref:common_gfdl1.2_i.adoc[License]
+//** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
 
