--- a/modules/architecture/nav-architecture-components-guide.adoc
+++ b/modules/architecture/nav-architecture-components-guide.adoc
@@ -46,7 +46,7 @@ ifndef::backend-pdf[]
 *** xref:salt-api.adoc[salt-api]
 *** xref:salt-minion.adoc[salt-minion]
 *** xref:salt-broker.adoc[salt-broker]
-** xref:common_gfdl1.2_i.adoc[License]
+//** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
 
