--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -30,7 +30,7 @@ ifndef::backend-pdf[]
 // Troubleshooting
 ** xref:tshoot-clients.adoc[Troubleshooting Clients]
 // Licence
-** xref:common_gfdl1.2_i.adoc[License]
+//** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
 
