--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -21,7 +21,7 @@ endif::[]
 *** xref:server-setup.adoc[Server Setup]
 *** xref:proxy-setup.adoc[Proxy Setup]
 //GFDL
-** xref:common_gfdl1.2_i.adoc[License]
+//** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
 
