--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -18,7 +18,7 @@ ifndef::backend-pdf[]
 ** xref:retail-migration-intro.adoc[Retail Upgrade]
 *** xref:retail-prepare-migration.adoc[Prepare for Migration]
 *** xref:retail-migration-slepostosuma.adoc[Migrate SLEPOS to SUMA]
-** xref:common_gfdl1.2_i.adoc[License]
+//** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
 
