--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -13,7 +13,7 @@ ifndef::backend-pdf[]
 ** xref:salt-ssh.adoc[SSH Integration]
 ** xref:salt-rate-limiting.adoc[Rate Limiting]
 ** xref:scale-minions.adoc[Scaling Salt Minions]
-** xref:common_gfdl1.2_i.adoc[License]
+//** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
 
