testing license removal for antora

--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -13,7 +13,7 @@ ifndef::backend-pdf[]
 ** xref:maintenance-window-tasks.adoc[Maintenance Window Tasks]
 ** xref:troubleshooting-upgrades-and-migrations.adoc[Troubleshooting]
 ** xref:upgrade-script-example.adoc[Example Script for Automated Upgrades]
-** xref:common_gfdl1.2_i.adoc[License]
+//** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
 
