--- a/modules/reference/pages/systems/autoinst-distributions.adoc
+++ b/modules/reference/pages/systems/autoinst-distributions.adoc
@@ -8,7 +8,7 @@ The [guimenu]``Distributions`` page enables you to find and create custom instal
 The [guimenu]``Distributions`` page does not display distributions already provided.
 They can be found within the [guimenu]``Distribution`` drop-down menu of the [guimenu]``Autoinstallation Details`` page.
 
-Before creating a distribution, you must make an installation data available, as described in the [ref]_SUSE Linux Enterprise Deployment Guide_ link:https://www.suse.com/documentation/sles-15/singlehtml/book_sle_deployment/book_sle_deployment.html#part.installserver[{sle} Deployment Guide] or, respectively, link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/installation_guide/chap-kickstart-installations[{rhel} Installation Guide : chap-kickstart-installations]
+Installation data must be made available prior to creating a distribution, as described in the [ref]_SUSE Linux Enterprise Deployment Guide_ link:https://www.suse.com/documentation/sles-15/singlehtml/book_sle_deployment/book_sle_deployment.html#part.installserver[{sle} Deployment Guide] or, respectively, link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/installation_guide/chap-kickstart-installations[{rhel} Installation Guide : chap-kickstart-installations]
 This tree must be located in a local directory on the {productname} server.
 ====
 
