Commented out unsupported bits

--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -2,10 +2,6 @@
 = Cobbler
 
 
-
-
-
-
 [[at.introduction.cobbler]]
 == Introduction
 
@@ -264,6 +260,8 @@ Always use [command]``/usr/sbin/spacewalk-service`` to start or stop {productnam
 ====
 
 
+////
+Commented out as per https://bugzilla.suse.com/show_bug.cgi?id=1136611 LKB 2019-05-29
 
 [[advanced.topics.cobbler.adddistro]]
 == Adding a Distribution to Cobbler
@@ -292,7 +290,10 @@ Specifies the path to the kernel image file.
 [option]``--initrd=``[replaceable]``path`` option::
 specifies the path to the initial ram disk (initrd) image file.
 
+////
 
+////
+Commented out as per https://bugzilla.suse.com/show_bug.cgi?id=1136611 LKB 2019-05-29
 
 [[advanced.topics.cobbler.addprofile]]
 == Adding a Profile to Cobbler
@@ -331,7 +332,10 @@ The default is 5{nbsp}GB.
 The maximum amount of physical RAM a virtual guest can consume (in megabytes).
 The default is 512{nbsp}MB.
 
+////
 
+////
+Commented out as per https://bugzilla.suse.com/show_bug.cgi?id=1136611 LKB 2019-05-29
 
 [[advanced.topics.cobbler.addsystem]]
 == Adding a System to Cobbler
@@ -367,7 +371,7 @@ Allows systems with the specified MAC address to automatically be provisioned to
 
 For more options, such as setting hostname or IP addresses, refer to the Cobbler manpage ([command]``man cobbler``).
 
-
+////
 
 [[advanced.topics.cobbler.templates]]
 == Using Cobbler Templates
@@ -483,6 +487,8 @@ $SNIPPET('my_partition')
 Wherever you invoke that function, the Cheetah parser will substitute the function with the snippet of code contained in the [path]``my_partition`` file.
 
 
+////
+Commented out as per https://bugzilla.suse.com/show_bug.cgi?id=1136611 LKB 2019-05-29
 
 [[advanced.topics.cobbler.koan]]
 == Using Koan
@@ -536,7 +542,7 @@ koan --replace-self --server=hostname --profile=name
 
 This command, running on the system to be replaced, will start the provisioning process and replace the system with the profile in [option]``--profile=name`` on the Cobbler server specified in [option]``--server=hostname``.
 
-
+////
 
 [[advanced.topics.cobbler.buildiso]]
 == Building ISOs with Cobbler
